Fix news slider spacing

--- a/wp-content/themes/asset/src/styles/_news-slider.scss
+++ b/wp-content/themes/asset/src/styles/_news-slider.scss
@@ -10,7 +10,7 @@
   }
 
   @include respond-min($screen-md) {
-    padding: 140px 0 180px 0;
+    padding-top: 140px;
   }
 }
 
